add some markup to the website

--- a/index.html
+++ b/index.html
@@ -1,5 +1,29 @@
-hello world
+<html>
 
-</br>
+<head>
+	<link rel="stylesheet" href="./style.css">
+</head>
 
-this website will be going live this week
+<body>
+	<div>
+		working full time on side projects 
+	</div>
+	<br />
+
+	this website will be going live this week
+	<sub>-some time ago</sub>
+
+	<div>
+		in the meantime i'm using it as a scratch space to let my mind flow
+	</div>
+
+	<div>
+		here be dragons, beware
+	</div>
+
+	<div>
+		lets see if this little bit more text makes this page look livelier
+	</div>
+</body>
+
+</html>
