update bio, 2 stylesheet rules

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 	<link rel="stylesheet" href="./style.css">
 </head>
 
-<body>
+<body class="hasFlex hasColumns">
+
+	<section>
+
 	<div>
 		working full time on side projects 
 	</div>
@@ -24,6 +27,15 @@
 	<div>
 		lets see if this little bit more text makes this page look livelier
 	</div>
+	</section>
+
+	<section>
+		<div>
+			Current occupation:
+		</div>
+
+		scala developer
+	</section>
 </body>
 
 </html>
