--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html5>
 <html>
 
 <head>
@@ -8,25 +9,25 @@
 
 	<section>
 
-	<div>
-		working full time on side projects 
-	</div>
-	<br />
+		<div>
+			working full time on side projects
+		</div>
+		<br />
 
-	this website will be going live this week
-	<sub>-some time ago</sub>
+		this website will be going live this week
+		<sub>-some time ago</sub>
 
-	<div>
-		in the meantime i'm using it as a scratch space to let my mind flow
-	</div>
+		<div>
+			in the meantime i'm using it as a scratch space to let my mind flow
+		</div>
 
-	<div>
-		here be dragons, beware
-	</div>
+		<div>
+			here be dragons, beware
+		</div>
 
-	<div>
-		lets see if this little bit more text makes this page look livelier
-	</div>
+		<div>
+			lets see if this little bit more text makes this page look livelier
+		</div>
 	</section>
 
 	<section>
