--- a/index.html
+++ b/index.html
@@ -30,13 +30,24 @@
 		</div>
 	</section>
 
-	<section class="padx">
+	<section class="padx flyout">
 		<div>
 			Current occupation:
 		</div>
 
 		scala developer
 	</section>
-</body>
 
-</html>
+	<section class="padx flyout">
+		<div>
+			Current aspirations:
+		</div>
+
+		<ul>
+			<li> to make game engine
+			</li>
+			<li> to build some desktop applications
+			</li>
+		</ul>
+	</section>
+</body>
