--- a/index.html
+++ b/index.html
@@ -35,18 +35,28 @@
 			Current occupation:
 		</div>
 
-		scala developer
+		java developer
+		<br />
+
+		writing a database management software from scratch.
+		<br />
+		reach out to me on linked in for further information
 	</section>
 
 	<section class="padx flyout">
 		<div>
-			Current aspirations:
+			Goals for this year:
 		</div>
-
 		<ul>
 			<li> to make game engine
 			</li>
 			<li> to build some desktop applications
+			</li>
+			<li> to make more music
+			</li>
+			<li> to learn vim marks
+			</li>
+			<li> to read another book
 			</li>
 		</ul>
 	</section>
