--- a/index.html
+++ b/index.html
@@ -60,4 +60,8 @@
 			</li>
 		</ul>
 	</section>
+	<section>
+		here's a link to my music:
+		<a href="soundcloud.com/akinevz">music</a>
+	</section>
 </body>
