add current interests

--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@
 <body class="hasFlex hasColumns">
 
 	<section>
-
 		<div>
 			working full time on side projects
 		</div>
 		<br />
-
 		this website will be going live this week
 		<sub>-some time ago</sub>
 
@@ -35,7 +33,7 @@
 			Current occupation:
 		</div>
 
-		java developer
+		java developer, database developer, beta tester
 		<br />
 
 		writing a database management software from scratch.
@@ -53,8 +51,13 @@
 			<li> to build some desktop applications
 			</li>
 			<li> to make more music
+				<ul>
+					<li>techno</li>
+					<li>techno</li>
+					<li>techno</li>
+				</ul>
 			</li>
-			<li> to learn vim marks
+			<li> to learn vim jump list
 			</li>
 			<li> to read another book
 			</li>
@@ -63,5 +66,8 @@
 	<section>
 		here's a link to my music:
 		<a href="soundcloud.com/akinevz">music</a>
+		<br />
+		here's a link to my code:
+		<a href="github.com/akinevz">code</a>
 	</section>
 </body>
