--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 	</section>
 	<section>
 		here's a link to my music:
-		<a href="soundcloud.com/akinevz">music</a>
+		<a href="soundcloud.com/brighton-foreigner">music</a>
 		<br />
 		here's a link to my code:
 		<a href="github.com/akinevz">code</a>
