--- a/index.html
+++ b/index.html
@@ -3,68 +3,121 @@
 
 <head>
 	<link rel="stylesheet" href="./style.css">
+	<title> Kirill Nevzorov </title>
+	<script>
+		const sections = {
+			items: [
+				{
+					title: "Interests and Projects",
+					tag: "h2"
+				}
+			]
+		}
+
+		sections.forEach(section => {
+
+		});
+	</script>
 </head>
 
 <body class="hasFlex hasColumns">
-
 	<section>
-		<div>
-			working full time on side projects
-		</div>
-		<br />
-		this website will be going live this week
-		<sub>-some time ago</sub>
-
-		<div>
-			in the meantime i'm using it as a scratch space to let my mind flow
-		</div>
-
-		<div>
-			here be dragons, beware
-		</div>
-
-		<div>
-			lets see if this little bit more text makes this page look livelier
-		</div>
-	</section>
-
-	<section class="padx flyout">
-		<div>
-			Current occupation:
-		</div>
-
-		java developer, database developer, beta tester
-		<br />
-
-		writing a database management software from scratch.
-		<br />
-		reach out to me on linked in for further information
-	</section>
-
-	<section class="padx flyout">
-		<div>
-			Goals for this year:
-		</div>
-		<ul>
-			<li> to make game engine
-			</li>
-			<li> to build some desktop applications
-			</li>
-			<li> to make more music
+		<h2>Interests and Projects</h2>
+		<section>
+			<div>
+				Scala programming:
 				<ul>
-					<li>techno</li>
-					<li>techno</li>
-					<li>techno</li>
+					<li>
+						HTML Formatter and Tag Library
+					</li>
+					<li>
+						AI / ML Projects
+					</li>
+					<li>
+						Swing Frontends
+					</li>
 				</ul>
-			</li>
-			<li> to learn vim jump list
-			</li>
-			<li> to read another book
-			</li>
-		</ul>
+			</div>
+			<div>
+				Java programming:
+				<ul>
+					<li>
+						Basic Games
+					</li>
+					<li>
+						Swing Applications
+					</li>
+				</ul>
+			</div>
+			<div>
+				C++ programming
+			</div>
+			<div>
+				Artificial Intelligence
+			</div>
+			<div>
+				Website design
+			</div>
+		</section>
 	</section>
 	<section>
-		here's a link to my code:
-		<a href="github.com/akinevz">code</a>
+		<h2>
+			Employment History
+		</h2>
+		<h5> Current status: seeking employment </h5>
+		<section>
+			<ul>
+				<li>
+					6 months at Salesforce
+				</li>
+				<li>
+					6 months freelance
+				</li>
+				<li>
+					break from studying
+				</li>
+				<li>
+					4 years at University of Sussex
+				</li>
+				<li>
+					1.5 years at CMS CmCK
+				</li>
+			</ul>
+		</section>
+	</section>
+	<section>
+		<h2>
+			Hobbies
+		</h2>
+		<div>
+			Computer Hardware
+			<section>
+				Specs:
+				<ul>
+					<li> Intel i7 11700k </li>
+					<li>32gb RAM</li>
+					<li>AMD Rx580</li>
+				</ul>
+			</section>
+			<section>
+				Running:
+				<ul>
+					<li> virtualisation software </li>
+					<li> graphics </li>
+					<li> audio workstation </li>
+					<li> jvm build server </li>
+				</ul>
+			</section>
+		</div>
+		<div>
+			Planned Projects
+			<section>
+				<ul>
+					<li> router + wifi centre </li>
+					<li> home automation </li>
+					<li> print server </li>
+				</ul>
+			</section>
+		</div>
 	</section>
 </body>
