--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<link rel="stylesheet" href="./style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title> Kirill Nevzorov </title>
 	<script>
 		const sections = {
@@ -60,6 +61,45 @@
 			</div>
 		</section>
 	</section>
+
+	<section>
+		<h2>
+			Hobbies
+		</h2>
+		<section>
+			<div>
+				Computer Hardware
+				<section>
+					Specs:
+					<ul>
+						<li> Intel i7 11700k </li>
+						<li>32gb RAM</li>
+						<li>AMD Rx580</li>
+					</ul>
+				</section>
+				<section>
+					Running:
+					<ul>
+						<li> virtualisation software </li>
+						<li> graphics </li>
+						<li> audio workstation </li>
+						<li> jvm build server </li>
+					</ul>
+				</section>
+			</div>
+			<div>
+				Planned Projects
+				<section>
+					<ul>
+						<li> router + wifi centre </li>
+						<li> home automation </li>
+						<li> print server </li>
+					</ul>
+				</section>
+			</div>
+		</section>
+	</section>
+
 	<section>
 		<h2>
 			Employment History
@@ -84,40 +124,5 @@
 				</li>
 			</ul>
 		</section>
-	</section>
-	<section>
-		<h2>
-			Hobbies
-		</h2>
-		<div>
-			Computer Hardware
-			<section>
-				Specs:
-				<ul>
-					<li> Intel i7 11700k </li>
-					<li>32gb RAM</li>
-					<li>AMD Rx580</li>
-				</ul>
-			</section>
-			<section>
-				Running:
-				<ul>
-					<li> virtualisation software </li>
-					<li> graphics </li>
-					<li> audio workstation </li>
-					<li> jvm build server </li>
-				</ul>
-			</section>
-		</div>
-		<div>
-			Planned Projects
-			<section>
-				<ul>
-					<li> router + wifi centre </li>
-					<li> home automation </li>
-					<li> print server </li>
-				</ul>
-			</section>
-		</div>
 	</section>
 </body>
