--- a/index.html
+++ b/index.html
@@ -21,84 +21,10 @@
 	</script>
 </head>
 
-<body class="hasFlex hasColumns">
-	<section>
-		<h2>Interests and Projects</h2>
-		<section>
-			<div>
-				Scala programming:
-				<ul>
-					<li>
-						HTML Formatter and Tag Library
-					</li>
-					<li>
-						AI / ML Projects
-					</li>
-					<li>
-						Swing Frontends
-					</li>
-				</ul>
-			</div>
-			<div>
-				Java programming:
-				<ul>
-					<li>
-						Basic Games
-					</li>
-					<li>
-						Swing Applications
-					</li>
-				</ul>
-			</div>
-			<div>
-				C++ programming
-			</div>
-			<div>
-				Artificial Intelligence
-			</div>
-			<div>
-				Website design
-			</div>
-		</section>
-	</section>
-
-	<section>
-		<h2>
-			Hobbies
-		</h2>
-		<section>
-			<div>
-				Computer Hardware
-				<section>
-					Specs:
-					<ul>
-						<li> Intel i7 11700k </li>
-						<li>32gb RAM</li>
-						<li>AMD Rx580</li>
-					</ul>
-				</section>
-				<section>
-					Running:
-					<ul>
-						<li> virtualisation software </li>
-						<li> graphics </li>
-						<li> audio workstation </li>
-						<li> jvm build server </li>
-					</ul>
-				</section>
-			</div>
-			<div>
-				Planned Projects
-				<section>
-					<ul>
-						<li> router + wifi centre </li>
-						<li> home automation </li>
-						<li> print server </li>
-					</ul>
-				</section>
-			</div>
-		</section>
-	</section>
+<body>
+	<h1>
+		Kirill N.
+	</h1>
 
 	<section>
 		<h2>
@@ -123,6 +49,88 @@
 					1.5 years at CMS CmCK
 				</li>
 			</ul>
+		</section>
+	</section>
+
+	<section class="hasFlex hasColumns">
+
+
+		<section>
+			<h2>Interests and Projects</h2>
+			<section>
+				<div>
+					Scala programming:
+					<ul>
+						<li>
+							HTML Formatter and Tag Library
+						</li>
+						<li>
+							AI / ML Projects
+						</li>
+						<li>
+							Swing Frontends
+						</li>
+					</ul>
+				</div>
+				<div>
+					Java programming:
+					<ul>
+						<li>
+							Basic Games
+						</li>
+						<li>
+							Swing Applications
+						</li>
+					</ul>
+				</div>
+				<div>
+					C++ programming
+				</div>
+				<div>
+					Artificial Intelligence
+				</div>
+				<div>
+					Website design
+				</div>
+			</section>
+		</section>
+
+		<section>
+			<h2>
+				Hobbies
+			</h2>
+			<section>
+				<div>
+					Computer Hardware
+					<section>
+						Specs:
+						<ul>
+							<li> Intel i7 11700k </li>
+							<li>32gb RAM</li>
+							<li>AMD Rx580</li>
+						</ul>
+					</section>
+					<section>
+						Running:
+						<ul>
+							<li> virtualisation software </li>
+							<li> graphics </li>
+							<li> audio workstation </li>
+							<li> jvm build server </li>
+						</ul>
+					</section>
+				</div>
+				<div>
+					Planned Projects
+					<section>
+						<ul>
+							<li> router + wifi centre </li>
+							<li> home automation </li>
+							<li> print server </li>
+						</ul>
+					</section>
+				</div>
+			</section>
 		</section>
 	</section>
 </body>
